--- a/vpc-creation.yaml
+++ b/vpc-creation.yaml
@@ -90,3 +90,18 @@
         tags:
           Name: Srinivasan-IGW
       register: igw
+
+    - name: Routing public subnets with IGW
+      ec2_vpc_route_table:
+          vpc_id: "{{vpc_out.vpc.id}}"
+          region: "{{region}}"
+          tags:
+            Name: PublicRouteTable
+          subnets:
+            - "{{ publicSubnet1_out.subnet.id }}"
+            - "{{ publicSubnet2_out.subnet.id }}"
+            - "{{ publicSubnet3_out.subnet_id }}"
+          routes:
+            - dest: 0.0.0.0/0
+              gateway_id: "{{ igw.gateway_id }}"
+      register: publicRT
