Created ID's to read and add to file

--- a/vpc-creation.yaml
+++ b/vpc-creation.yaml
@@ -130,3 +130,24 @@
               gateway_id: "{{ NATgateway_out.nat_gateway_id }}"
       register: privateRT
       
+    - name: printing the ID of all network components
+      debug:
+        var: "{{item}}"
+      loop: 
+        - vpc_out.vpc.id
+        - igw.gateway_id
+        - NATgateway_out.nat_gateway_id
+        - publicSubnet1_out.subnet.id
+        - publicSubnet2_out.subnet.id
+        - publicSubnet3_out.subnet_id 
+        - privateSubnet1_out.subnet.id
+        - privateSubnet2_out.subnet.id
+        - privateSubnet3_out.subnet_id
+
+    - name: storing ID's in a file 
+      copy:
+        content: "vpc.id: {{vpc_out.vpc.id}}\n IGW.id: {{igw.gateway_id}}\n NAT-Gateway.id: {{NATgateway_out.nat_gateway_id}}"
+        dest: vars/output-ids
+
+
+      
